# aith-info-retrieval

./: .gitattributes  .gitignore  README.md  pyproject.toml
hw01/: README.md  hw01.ipynb  hw01_additional.ipynb
hw01/data/: brothers_karamazov.txt  war_and_peace.txt  words_bert.csv  words_lemmatized.csv  words_stemmed.csv
hw02/: README.md  hw02_bm25ranking.ipynb  src.py
hw02/data/: 20260330_200259_bm25_lemmatized_runs.csv  20260330_200259_bm25_original_runs.csv  20260330_200259_bm25_stemmed_runs.csv  20260330_200259_tfidf_lemmatized_runs.csv  20260330_200259_tfidf_original_runs.csv  (+2 more)
hw03/: .gitignore  README.md  hw03_imath.ipynb  hw03_wikir_ranking.ipynb  ranking.py  ranking_tutorial.ipynb  retrieval.py
hw04/: README.md
hw04/src/: __init__.py  (+7 more)
hw05/: README.md  pyproject.toml
hw05/notebooks/: hw05_rag.ipynb
hw05/results/r1/mirage_base/: metrics_base.jsonl
hw05/results/r1/mirage_oracle_extractive/: deepset_bert-base-cased-squad2_oracle_extractive.csv  deepset_bert-base-cased-squad2_oracle_extractive_scored.csv  metrics_oracle_extractive.csv
hw05/results/r1/mirage_oracle_open_book/: Qwen_Qwen2.5-3B-Instruct_oracle_open_book.csv  Qwen_Qwen2.5-3B-Instruct_oracle_open_book_scored.csv  metrics_oracle_open_book.csv
hw05/results/r1/mirage_retrieval_top1/: Qwen_Qwen2.5-3B-Instruct_oracle_open_book.csv  Qwen_Qwen2.5-3B-Instruct_oracle_open_book_scored.csv  metrics_oracle_open_book.csv
hw05/results/r1/mirage_retrieval_top5/: Qwen_Qwen2.5-3B-Instruct_oracle_open_book.csv  Qwen_Qwen2.5-3B-Instruct_oracle_open_book_scored.csv  metrics_oracle_open_book.csv
(+6 files in other folders)
