[project]
name = "info-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.10",
    "datasets>=4.8.3",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "ir-datasets>=0.5.11",
    "ir-measures>=0.4.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "optuna>=4.8.0",
    "pandas>=3.0.1",
    "pydantic",
    "pydantic-settings",
    "pip>=26.0.1",
    "pymystem3>=0.2.0",
    "qdrant-client",
    "rank-bm25>=0.2.2",
    "regex>=2026.2.28",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.3.0",
    "spacy>=3.8.11",
    "tenacity",
    "torch>=2.11.0",
    "transformers>=5.3.0",
]
