[project]
name = "hw05"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bert-score>=0.3.13",
    "datasets>=4.8.4",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "tenacity>=9.1.4",
    "transformers>=5.6.1",
    "vllm>=0.10.1.1",
]
